QPID-5033: Bad buffer accounting leading to spurious SSL errors on Windows

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1623614 13f79535-47bb-0310-9956-ffa450edef68